Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp
@@ -135,12 +135,17 @@ void InlineDisplayContentBuilder::appendTextDisplayBox(const Line::Run& lineRun,
             : formattingState().layoutState().geometryForBox(layoutBox.initialContainingBlock()).contentBox().size();
         auto strokeOverflow = ceilf(style.computedStrokeWidth(ceiledIntSize(initialContaingBlockSize)));
         auto inkOverflow = textRunRect;
+
         inkOverflow.inflate(strokeOverflow);
         auto letterSpacing = style.fontCascade().letterSpacing();
         if (letterSpacing < 0) {
             // Last letter's negative spacing shrinks logical rect. Push it to ink overflow.
             inkOverflow.expand(-letterSpacing, { });
         }
+
+        auto textShadow = style.textShadowExtent();
+        inkOverflow.inflate(-textShadow.top(), textShadow.right(), textShadow.bottom(), -textShadow.left());
+
         return inkOverflow;
     };
     auto content = downcast<InlineTextBox>(layoutBox).content();
